--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <title></title>
   </head>
   <body>
-    <h1>Welcome!</h1>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <main>
+      <section class="min-h-screen bg-black">
+        <h1 class="text-7xl text-white text-glow">Hello!</h1>
+        <h1 class="text-7xl text-white text-glow">I'm Toubha,</h1>
+        <h1 class="text-7xl text-white text-glow">Frontend Developer.()</h1>
+      </section>
+
+      <section>
+        <div
+          id="projects-container"
+          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"
+        ></div>
+      </section>
+
+      <script type="module" src="/src/main.js"></script>
+    </main>
   </body>
 </html>
