--- a/index.html
+++ b/index.html
@@ -15,17 +15,32 @@
   </head>
   <body>
     <main>
-      <section class="min-h-screen bg-black">
-        <h1 class="text-7xl text-white text-glow">Hello!</h1>
-        <h1 class="text-7xl text-white text-glow">I'm Toubha,</h1>
-        <h1 class="text-7xl text-white text-glow">Frontend Developer.()</h1>
+      <section>
+        <div class="heading-container">
+          <p class="welcome-heading">Hi, I'm Tubha!</p>
+          <h1 class="text-white text-glow">Frontend Developer.</h1>
+          <p class="paragraph-containers">
+            Hi! I'm Tubha, a frontend developement student who enjoys turning
+            ideas into clean, responsive websites. This portfolio brings
+            together three key projects from my learning journey this year -
+            each one a change to grow, learn, and keep pushing my skills
+            forward.
+          </p>
+        </div>
+        <h2 class="welcome-heading">My Projects</h2>
+        <p class="paragraph-containers">
+          Below you'll find three projects developed throughout the course. Each
+          card links to a live demo, and the project's Github Repository.
+        </p>
+        <div id="projects-container" class="card-container"></div>
       </section>
 
       <section>
-        <div
-          id="projects-container"
-          class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"
-        ></div>
+        <h2 class="welcome-heading">Github Profile</h2>
+        <p class="paragraph-containers">
+          View my work and contributions on Github or get touch via email.
+          <a href>https://github.com/Tubhaahmad</a>
+        </p>
       </section>
 
       <script type="module" src="/src/main.js"></script>
