added and editied github link container

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <main>
       <section>
         <div class="heading-container">
-          <p class="welcome-heading">Hi, I'm Tubha!</p>
-          <h1 class="text-white text-glow">Frontend Developer.</h1>
+          <div class="welcome-heading">
+            <p class="font-semibold text-white text-glow">Hi, I'm Tubha!</p>
+          </div>
+          <h1 class="text-white text-glow">Frontend Developement Student.</h1>
           <p class="paragraph-containers">
             Hi! I'm Tubha, a frontend developement student who enjoys turning
             ideas into clean, responsive websites. This portfolio brings
@@ -27,7 +29,10 @@
             forward.
           </p>
         </div>
-        <h2 class="welcome-heading">My Projects</h2>
+
+        <div class="welcome-heading">
+          <h2 class="text-white text-glow">My Projects</h2>
+        </div>
         <p class="paragraph-containers">
           Below you'll find three projects developed throughout the course. Each
           card links to a live demo, and the project's Github Repository.
@@ -35,12 +40,16 @@
         <div id="projects-container" class="card-container"></div>
       </section>
 
-      <section>
-        <h2 class="welcome-heading">Github Profile</h2>
+      <section class="github-profile-container">
+        <div class="welcome-heading">
+          <h2 class="text-white text-glow">Github Profile</h2>
+        </div>
         <p class="paragraph-containers">
-          View my work and contributions on Github or get touch via email.
-          <a href>https://github.com/Tubhaahmad</a>
+          View my work and contributions on Github or get touch via email!
         </p>
+        <div class="github-profile-link">
+          <a href="https://github.com/Tubhaahmad">Github Profile!</a>
+        </div>
       </section>
 
       <script type="module" src="/src/main.js"></script>
