added github icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.css"
+      integrity="sha512-8BU3emz11z9iF75b10oPjjpamM4Mz23yQFQymbtwyPN3mNWHxpgeqyrYnkIUP6A8KyAj5k2p3MiYLtYqew7gIw=="
+      crossorigin="anonymous"
+    />
     <title></title>
   </head>
   <body>
@@ -48,7 +54,9 @@
           View my work and contributions on Github or get touch via email!
         </p>
         <div class="github-profile-link">
-          <a href="https://github.com/Tubhaahmad">Github Profile!</a>
+          <a href="https://github.com/Tubhaahmad"
+            > <i class="fab fa-github"></i>Github Profile</i
+          ></a>
         </div>
       </section>
 
