--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h2 class="text-white text-glow">Github Profile</h2>
         </div>
         <p class="paragraph-containers">
-          View my work and contributions on Github or get touch via email!
+          View my work and contributions on Github!
         </p>
         <div class="github-profile-link">
           <a href="https://github.com/Tubhaahmad"
